[package]
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]
categories = ["cryptography", "authentication", "web-programming", "data-structures"]
description = "JWT library for rust using serde, serde_json and openssl"
documentation = "https://commandline.github.io/medallion/"
homepage = "http://github.com/commandline/medallion"
keywords = ["JWT", "token", "web", "JSON", "RSA"]
license = "MIT"
name = "medallion"
readme = "README.md"
repository = "http://github.com/commandline/medallion"
version = "2.2.3"
[badges]
[badges.travis-ci]
branch = "master"
repository = "https://travis-ci.org/commandline/medallion"

[dependencies]
base64 = "~0.10.0"
openssl = "~0.10.15"
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.33"
time = "~0.1.40"
failure = "~0.1.3"
