[package]
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]
categories = ["cryptography", "authentication", "web-programming", "data-structures"]
description = "JWT library for rust using serde, serde_json and openssl"
documentation = "https://cmdln.github.io/medallion/"
homepage = "http://github.com/cmdln/medallion"
keywords = ["JWT", "token", "web", "JSON", "RSA"]
license = "MIT"
name = "medallion"
readme = "README.md"
repository = "http://github.com/cmdln/medallion"
version = "2.4.1"
edition = "2018"
[badges]
[badges.travis-ci]
branch = "master"
repository = "https://travis-ci.org/cmdln/medallion"

[dependencies]
base64 = "~0.13.0"
openssl = "~0.10.15"
serde = { version = "^1.0.114", features = [ "derive" ] }
serde_json = "^1.0.55"
anyhow = "^1.0.31"
chrono = "~0.4.11"
